Updated sizing of quiz container.

--- a/style.css
+++ b/style.css
@@ -5,3 +5,9 @@
     padding-bottom: auto;
 }
 
+#quizContainer {
+    width: 1000px;
+    height: auto;
+    padding-top: auto;
+    padding-bottom: auto;
+}
